# CryptoAnalytics

./: .gitignore  Readme.md  backend.Dockerfile  backend.dockerfile  docker-compose.yaml  frontend.Dockerfile  frontend.dockerfile
backend/: .env  Cargo.toml  sqlx-data.json
backend/migrations/: 20220424152111_1.sql  20220424152456_definitions.sql
backend/scripts/: db_create.sql  schema.sql
backend/src/: main.rs
backend/src/database/: mod.rs  pool.rs  provider.rs
backend/src/models/: definition.rs  entry.rs  mod.rs  portfolio.rs
backend/src/server/: endpoints.rs  mod.rs  rest_server.rs
backend/src/services/: calculator_service.rs  mod.rs
frontend/: .env  Cargo.toml  Trunk.toml  dockerfile  index.html
frontend/src/: app_route.rs  lib.rs
frontend/src/agents/: agent_request.rs  interval_agent.rs  load_agent.rs  message.rs  mod.rs
frontend/src/analytics/: analytics.css  component.rs  message.rs  mod.rs
frontend/src/analytics/general/: component.rs  message.rs  mod.rs
frontend/src/analytics/history/: component.rs  mod.rs
frontend/src/application/: application.css  component.rs  message.rs  tab.rs
frontend/src/common/: data.rs  formatted_data.rs  formatted_portfolio.rs  formatted_price.rs  formatted_price_data.rs  mod.rs  price_formatting.rs
frontend/src/components/: crypto_general.rs  crypto_history.rs  mod.rs
frontend/src/etherscan/: component.rs  etherscan.css  mod.rs
frontend/src/general/: component.rs  formatted_data.rs  general.css  message.rs  mod.rs
frontend/src/history/: component.rs  history.css
frontend/src/models/: api_data.rs  crypto.rs  cryptos.rs  entry.rs  gas_price_data.rs  history_price.rs  mod.rs  msg.rs  portfolio.rs  price.rs  prices_data.rs
frontend/src/portfolio/: component.rs  message.rs  portfolio.css
frontend/src/routing/: mod.rs  route.rs
frontend/src/store/: crypto_state.rs  crypto_store.rs  mod.rs
nginx/: nginx.conf
(+9 files in other folders)
