[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide="0.16"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1"
serde_json = "1"

uuid = { version = "0.8", features = ["v4", "serde"] }
sqlx = { version = "0.5.13", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid", "bigdecimal", "time"] }
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = "0.4"
dotenv = "0.15"
