[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.67"
serde = "1"
serde_derive = "1"
serde_json = "1"
bigdecimal = { version = "0.2", features = ["serde"] }
anyhow = "1"
yew-router = "0.15.0"
chrono = { version = "0.4", features = ["wasmbind"] }
thousands = "0.2.0"
load-dotenv = "0.1.2"
